# ashaulskyi-utils

./: README.md  pyproject.toml
ashaulskyi_utils/: decorators.py
ashaulskyi_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scr/fastapi_decorators/: __init__.py  decorators.py
