[build-system]
requires = ["setuptools >= 77.0.3", "fastapi[standard] >= 0.116.1", "pyjwt >= 2.10.1"]
build-backend = "setuptools.build_meta"

[project]
name = "ashaulskyi-utils"
version = "0.0.1"
authors = [
  { name="Aleksandr Shaulskyi", email="ashowlsky@gmail.com" },
]
description = "My frequently used fastapi decorators."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/aleksandrshaulskyi/fastapi-decorators"
